Update dependency Implement bootstrap as a proper service. Made ModuleLayer not care what type of classloader it is. Code cleanup and better debug messages. Also slightly better performance by getting rid of stream hell.